# ads

./: .env.example  .gitignore  CHECKLIST.docx  CHECKLIST.md  README.md  package-lock.json  package.json  tsconfig.json  turbo.json
.github/workflows/: checklist-pdf.yml  ci.yml
apps/ai-worker/: Dockerfile  pyproject.toml
apps/ai-worker/src/: config.py  main.py
apps/ai-worker/src/routes/: generate.py  geo.py  health.py  jobs.py
apps/ai-worker/src/services/: generation.py  geo_engine.py  queue.py  site_diagnostic.py
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: server.ts
apps/api/src/config/: env.ts
apps/api/src/plugins/: auth.ts  cors.ts  helmet.ts  rateLimit.ts  redis.ts  swagger.ts
apps/api/src/routes/: ads-integrations.ts  auth.ts  budget.ts  clients.ts  content.ts  conversions.ts  crm-webhook.ts  dashboard.ts  funnel.ts  geo.ts  google-ads.ts  google-oauth.ts  google-sheets.ts  health.ts  hubspot.ts  integrations.ts  leads.ts  meta-oauth.ts  privacy.ts  reports.ts  tenants.ts  users.ts  utm.ts  (+3 more)
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: orffia.js
apps/web/src/: middleware.ts
docs/: progress.md
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infra/docker/: Dockerfile.ai-worker  Dockerfile.api  Dockerfile.web
infra/nginx/: ads-vhost.conf  nginx.conf  orffia-vhost.conf  synthex-vhost.conf
infra/scripts/: create-env.sh  deploy.sh  init-database.sh  init-database.sql  seed-admin.sh  setup-traefik.sh  setup-vps.sh
infra/traefik/: traefik.yml
(+86 files in other folders)
