[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthex-ai-worker"
version = "0.1.0"
description = "Synthex AI Worker — content generation service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.59.8",
    "anthropic>=0.43.0",
    "redis>=5.2.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.4",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.28.1",
    "ruff>=0.9.1",
    "mypy>=1.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
